unpackaged/main/default/objects/Opportunity/fields/Count_of_overall_satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Count_of_overall_satisfaction__c</fullName>
    <label>Count of overall satisfaction</label>
    <summaryFilterItems>
        <field>SurveyResult__c.Overall_Satisfaction_Calc__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SurveyResult__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>