unpackaged/main/default/objects/Opportunity/fields/CR_Date__c.field-meta.xml
<CustomField>
    <fullName>CR_Date__c</fullName>
    <inlineHelpText>Date exhibition contract received by GES</inlineHelpText>
    <label>Contract Received Date</label>
    <type>Date</type>
</CustomField>