unpackaged/main/default/objects/Opportunity/fields/CVB_Project__c.field-meta.xml
<CustomField>
    <fullName>CVB_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CVB Project</label>
    <type>Checkbox</type>
</CustomField>