unpackaged/main/default/objects/Opportunity/fields/Days_between_Created_Contract_close__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Created_Contract_close__c</fullName>
    <description>This field is created for reports</description>
    <formula>CloseDate  - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days between Created &amp; Contract close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>