unpackaged/main/default/objects/Opportunity/fields/DB_Date__c.field-meta.xml
<CustomField>
    <fullName>DB_Date__c</fullName>
    <description>Date the Opportunity is put into DB stage</description>
    <inlineHelpText>Date the Opportunity is put into DB stage</inlineHelpText>
    <label>DB Date</label>
    <type>Date</type>
</CustomField>