unpackaged/main/default/objects/Opportunity/fields/Deadline_to_Exit_Venue_Date_Populated__c.field-meta.xml
<CustomField>
    <fullName>Deadline_to_Exit_Venue_Date_Populated__c</fullName>
    <formula>if(isblank(GES_Clear_Date__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check Field if Deadline Exit completed.</inlineHelpText>
    <label>Deadline to Exit Venue Date Populated?</label>
    <type>Text</type>
</CustomField>