unpackaged/main/default/objects/Opportunity/fields/Declined_To_Bid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_To_Bid_Reason__c</fullName>
    <inlineHelpText>Enter a reason as to why you have chosen the DB (Declined to Bid) stage.</inlineHelpText>
    <label>Declined To Bid Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client Cancelled Attendance/Opted For Shell Scheme</fullName>
            </value>
            <value>
                <fullName>Client Did Not Supply RFP</fullName>
            </value>
            <value>
                <fullName>GES Declined - Insufficient Budget</fullName>
            </value>
            <value>
                <fullName>GES Declined - Internal Resource Issues</fullName>
            </value>
            <value>
                <fullName>GES Declined - Time Scales To Tight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>