unpackaged/main/default/objects/Opportunity/fields/Default_Graphics_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Default_Graphics_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Graphics Assignee</description>
    <inlineHelpText>Please select the person responsible for Graphics service requests at the show</inlineHelpText>
    <label>Default Graphics Assignee</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select an active Salesforce account for the Graphics assignee</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select the Default Graphics Assignee, they must have an active Salesforce account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoOpportunitiesGraphicsAssignee</relationshipName>
    <type>Lookup</type>
</CustomField>