unpackaged/main/default/objects/Opportunity/fields/Default_Logistics_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Default_Logistics_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Logistics Assignee</description>
    <inlineHelpText>Please select the default Logistics assignee from the list</inlineHelpText>
    <label>Default Logistics Assignee</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select the person responsible for Logistics Service requests from the list</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select the person responsible for Logistics from the list. They must have an active Salesforce account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoOpportunitiesLogisticsAssignee</relationshipName>
    <type>Lookup</type>
</CustomField>