unpackaged/main/default/objects/Opportunity/fields/Default_Nameboard_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Default_Nameboard_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Nameboard Assignee</description>
    <inlineHelpText>Please select the default Nameboard assignee from the list</inlineHelpText>
    <label>Default Nameboard Assignee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select the person responsible for Nameboards from the list. They must have an active Salesforce account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoOpportunitiesNameboardAssignee</relationshipName>
    <type>Lookup</type>
</CustomField>