unpackaged/main/default/objects/Opportunity/fields/DELIVERY__c.field-meta.xml
<CustomField>
    <fullName>DELIVERY__c</fullName>
    <label>DELIVERY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>