unpackaged/main/default/objects/Opportunity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Blitz field for Opportunity Integration</description>
    <label>Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>