unpackaged/main/default/objects/Opportunity/fields/Design_Option__c.field-meta.xml
<CustomField>
    <fullName>Design_Option__c</fullName>
    <label>Design Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option A</fullName>
                <label>Avon</label>
            </value>
            <value>
                <fullName>Option B</fullName>
                <label>Boyne</label>
            </value>
            <value>
                <fullName>Option C</fullName>
                <label>Clyde</label>
            </value>
            <value>
                <fullName>Option D</fullName>
                <label>Danube</label>
            </value>
            <value>
                <fullName>Option E</fullName>
                <label>Elbe</label>
            </value>
            <value>
                <fullName>Option F</fullName>
                <label>Frome</label>
            </value>
            <value>
                <fullName>Option G</fullName>
                <label>Garda</label>
            </value>
            <value>
                <fullName>Option H</fullName>
                <label>Hudson</label>
            </value>
            <value>
                <fullName>Option I</fullName>
                <label>Inari</label>
            </value>
            <value>
                <fullName>Option J</fullName>
                <label>Jordan</label>
            </value>
            <value>
                <fullName>Option K</fullName>
                <label>Klondike</label>
            </value>
            <value>
                <fullName>Option L</fullName>
                <label>Loire</label>
            </value>
            <value>
                <fullName>Option M</fullName>
                <label>Mekong</label>
            </value>
            <value>
                <fullName>Nile</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
            <value>
                <fullName>Ohio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>