unpackaged/main/default/objects/Opportunity/fields/Difference_between_created_start_date__c.field-meta.xml
<CustomField>
    <fullName>Difference_between_created_start_date__c</fullName>
    <description>This field is used in reporting</description>
    <formula>Start_Date__c   - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference between created &amp; start date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>