unpackaged/main/default/objects/Opportunity/fields/Digital_Signage__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signage__c</fullName>
    <label>Digital Signage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>