unpackaged/main/default/objects/Opportunity/fields/Direct_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Direct_Bill_Amount__c</fullName>
    <label>Direct Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>