unpackaged/main/default/objects/Opportunity/fields/DM_Close_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Close_Type__c</fullName>
    <formula>If (IsWon = True, &quot;Won&quot;, 
  if (IsClosed = False, &quot;Open&quot;, &quot;Lost&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Type</label>
    <type>Text</type>
</CustomField>