unpackaged/main/default/objects/Opportunity/fields/Dollar_Rebate_Option__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Rebate_Option__c</fullName>
    <label>Dollar Rebate Option</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Supplemental_Revenue_Stream_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Accelerated Revenue Share Payment</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>