unpackaged/main/default/objects/Opportunity/fields/E_D_Competitor__c.field-meta.xml
<CustomField>
    <fullName>E_D_Competitor__c</fullName>
    <inlineHelpText>These are the competitors. You can select up to 5.</inlineHelpText>
    <label>E&amp;E Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>~1-2 Comp-Names not available</fullName>
            </value>
            <value>
                <fullName>~3-5 Comp-Names not available</fullName>
            </value>
            <value>
                <fullName>~Don&#39;t know quantity or names</fullName>
            </value>
            <value>
                <fullName>1220 Exhibits, Inc.</fullName>
            </value>
            <value>
                <fullName>3D Exhibits</fullName>
            </value>
            <value>
                <fullName>Access TCA</fullName>
            </value>
            <value>
                <fullName>AD-EX International</fullName>
            </value>
            <value>
                <fullName>Art Guild</fullName>
            </value>
            <value>
                <fullName>ArtFX</fullName>
            </value>
            <value>
                <fullName>Avalon Exhibits</fullName>
            </value>
            <value>
                <fullName>Bella Group</fullName>
            </value>
            <value>
                <fullName>Berm Studios</fullName>
            </value>
            <value>
                <fullName>Blair</fullName>
            </value>
            <value>
                <fullName>Cal Ostlund</fullName>
            </value>
            <value>
                <fullName>CarriageWorks</fullName>
            </value>
            <value>
                <fullName>Cart King</fullName>
            </value>
            <value>
                <fullName>Catalyst Exhibits Inc.</fullName>
            </value>
            <value>
                <fullName>CenterPoint</fullName>
            </value>
            <value>
                <fullName>CEP</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Coast Designs</fullName>
            </value>
            <value>
                <fullName>Compass Collective</fullName>
            </value>
            <value>
                <fullName>Creatacor, Inc.</fullName>
            </value>
            <value>
                <fullName>Creations</fullName>
            </value>
            <value>
                <fullName>Czarnowski Exhibit Service Specialists</fullName>
            </value>
            <value>
                <fullName>David Torres Productions, Inc</fullName>
            </value>
            <value>
                <fullName>Delphi Productions Inc.</fullName>
            </value>
            <value>
                <fullName>Derse</fullName>
            </value>
            <value>
                <fullName>Design Craftsmen</fullName>
            </value>
            <value>
                <fullName>Dimensional Communications Inc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>