unpackaged/main/default/objects/Opportunity/fields/E_E_Advantage_Program__c.field-meta.xml
<CustomField>
    <fullName>E_E_Advantage_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates whether this is an Advantage Program project</description>
    <label>E&amp;E Advantage Program</label>
    <type>Checkbox</type>
</CustomField>