unpackaged/main/default/objects/Opportunity/fields/E_E_Congress_Mgr__c.field-meta.xml
<CustomField>
    <fullName>E_E_Congress_Mgr__c</fullName>
    <inlineHelpText>Please select the congress manager from the list</inlineHelpText>
    <label>E&amp;E Congress Mgr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Debbie Hummel</fullName>
            </value>
            <value>
                <fullName>Elena Fezzardi</fullName>
            </value>
            <value>
                <fullName>Eva Keogh</fullName>
            </value>
            <value>
                <fullName>Eva McCartney</fullName>
            </value>
            <value>
                <fullName>Gail Griffith</fullName>
            </value>
            <value>
                <fullName>Ilyse Link</fullName>
            </value>
            <value>
                <fullName>Jeanette Ballady</fullName>
            </value>
            <value>
                <fullName>Julia Noonan</fullName>
            </value>
            <value>
                <fullName>Michelle Pflug</fullName>
            </value>
            <value>
                <fullName>No CM Involvement</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
            <value>
                <fullName>Tricia Purcel</fullName>
            </value>
            <value>
                <fullName>Wendy Irvine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>