unpackaged/main/default/objects/Opportunity/fields/E_E_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>E_E_Project_Manager__c</fullName>
    <inlineHelpText>Please select the project manager</inlineHelpText>
    <label>E&amp;E Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abelskamp, Tim</fullName>
            </value>
            <value>
                <fullName>Affeldt, Burghard</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Aggelis, Demitri</fullName>
            </value>
            <value>
                <fullName>Ajmal, Raees</fullName>
            </value>
            <value>
                <fullName>Allardice, Tracy</fullName>
            </value>
            <value>
                <fullName>Altonen, Ryan</fullName>
            </value>
            <value>
                <fullName>Anderson, Kimberly</fullName>
            </value>
            <value>
                <fullName>Apicella, Mike</fullName>
            </value>
            <value>
                <fullName>Archibald, Hope</fullName>
            </value>
            <value>
                <fullName>Asehinde, Brittany</fullName>
            </value>
            <value>
                <fullName>Ashya, Kashmiri</fullName>
            </value>
            <value>
                <fullName>Asia – Nancy Chan</fullName>
            </value>
            <value>
                <fullName>Bailen, Steve</fullName>
            </value>
            <value>
                <fullName>Baker, Kate</fullName>
            </value>
            <value>
                <fullName>Baker, Phil</fullName>
            </value>
            <value>
                <fullName>Ball, Aislinn</fullName>
            </value>
            <value>
                <fullName>Barin, Samantha</fullName>
            </value>
            <value>
                <fullName>Bartels, Allison</fullName>
            </value>
            <value>
                <fullName>Bartolowits, Bryan</fullName>
            </value>
            <value>
                <fullName>Baruffa, Lia</fullName>
            </value>
            <value>
                <fullName>Basara, Megan</fullName>
            </value>
            <value>
                <fullName>Baxter, Kirk</fullName>
            </value>
            <value>
                <fullName>Behling, Elizabeth</fullName>
            </value>
            <value>
                <fullName>Belitcenko, Jelana</fullName>
            </value>
            <value>
                <fullName>Belitcenko, Jelena</fullName>
            </value>
            <value>
                <fullName>Bergeron, Betty</fullName>
            </value>
            <value>
                <fullName>Bermudez, Alicia</fullName>
            </value>
            <value>
                <fullName>Bernice, Wiggett</fullName>
            </value>
            <value>
                <fullName>Bernice Wiggett</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>