unpackaged/main/default/objects/Opportunity/fields/EAC__c.field-meta.xml
<CustomField>
    <fullName>EAC__c</fullName>
    <description>Exhibitor Approved Contractor</description>
    <label>EAC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Expo Svcs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>