unpackaged/main/default/objects/Opportunity/fields/EAC_Deadline__c.field-meta.xml
<CustomField>
    <fullName>EAC_Deadline__c</fullName>
    <inlineHelpText>Deadline for exhibitors to designate EAC (Exhibitor Appointed Contractor)</inlineHelpText>
    <label>EAC Deadline</label>
    <type>Date</type>
</CustomField>