unpackaged/main/default/objects/Opportunity/fields/Early_Order_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Early_Order_Deadline__c</fullName>
    <description>Early order deadline date.</description>
    <inlineHelpText>Deadline for exhibitors to receive discount pricing.</inlineHelpText>
    <label>Early Order Deadline</label>
    <type>Date</type>
</CustomField>