unpackaged/main/default/objects/Opportunity/fields/ED_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>ED_Opportunity_Owner__c</fullName>
    <description>E&amp;D Sales Rep from GBMS</description>
    <label>ED Opportunity Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>