unpackaged/main/default/objects/Opportunity/fields/Edit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Edit_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked box makes amount field for Housing opportunities editable</inlineHelpText>
    <label>Edit Amount</label>
    <type>Checkbox</type>
</CustomField>