unpackaged/main/default/objects/Opportunity/fields/EE_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>EE_Facility_ID__c</fullName>
    <formula>IF(OR(ISNULL(Show_Occurrence__c),ISBLANK(Show_Occurrence__c)),IF(OR(ISNULL(Non_Show__c),ISBLANK(Non_Show__c)),&#39;&#39;,Non_Show__r.LMS_Facility_ID__c),Show_Occurrence__r.LMS_Facility_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E&amp;E Facility ID</label>
    <type>Text</type>
</CustomField>