unpackaged/main/default/objects/Opportunity/fields/EE_Sales_Location__c.field-meta.xml
<CustomField>
    <fullName>EE_Sales_Location__c</fullName>
    <formula>IF(OR(ISNULL(Show_Occurrence__c),ISBLANK(Show_Occurrence__c)),IF(OR(ISNULL(Non_Show__c),ISBLANK(Non_Show__c)),&#39;&#39;,TEXT(Non_Show__r.Sales_Location__c)),TEXT(Show_Occurrence__r.Sales_Location__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E&amp;E Sales Location</label>
    <type>Text</type>
</CustomField>