unpackaged/main/default/objects/Opportunity/fields/Engaged_With_Customer__c.field-meta.xml
<CustomField>
    <fullName>Engaged_With_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Care team will search SFDC to see if there is a third party opp existing for them and tick this box to let the Adfield team member know that the exhibitor is currently being supported by Customer Care.</description>
    <inlineHelpText>Customer Care team will search SFDC to see if there is a third party opp existing for them and tick this box to let the Adfield team member know that the exhibitor is currently being supported by Customer Care.</inlineHelpText>
    <label>Engaged With Customer</label>
    <type>Checkbox</type>
</CustomField>