unpackaged/main/default/objects/Opportunity/fields/Estimated_AV_Exhibitor_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_AV_Exhibitor_Revenue__c</fullName>
    <inlineHelpText>Estimated AV Exhibitor Revenue.</inlineHelpText>
    <label>Estimated AV Exhibitor Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>