unpackaged/main/default/objects/Opportunity/fields/Estimated_AV_Show_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_AV_Show_Revenue__c</fullName>
    <label>Estimated AV Show Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>