unpackaged/main/default/objects/Opportunity/fields/Estimated_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Attendees__c</fullName>
    <inlineHelpText>Estimated Number of Attendees</inlineHelpText>
    <label>Estimated Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>