unpackaged/main/default/objects/Opportunity/fields/Estimated_Show_Margin__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Show_Margin__c</fullName>
    <label>Estimated Show Profit (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>