unpackaged/main/default/objects/Opportunity/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <inlineHelpText>Yes - Identifies an Event as a Planned Event</inlineHelpText>
    <label>Planned Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>