unpackaged/main/default/objects/Opportunity/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <inlineHelpText>Event Code from Exhibitor</inlineHelpText>
    <label>Event Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>