unpackaged/main/default/objects/Opportunity/fields/Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event manager responsible for the show</description>
    <inlineHelpText>Please select the Event Manager</inlineHelpText>
    <label>Event Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select the Event Manager from the list. They must have an active account in Salesforce.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoOpportunitiesEventManager</relationshipName>
    <type>Lookup</type>
</CustomField>