unpackaged/main/default/objects/Opportunity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Live Event</fullName>
            </value>
            <value>
                <fullName>Summits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>