unpackaged/main/default/objects/Opportunity/fields/EventFormula__c.field-meta.xml
<CustomField>
    <fullName>EventFormula__c</fullName>
    <formula>IF(OR(ISNULL(Show_Occurrence__c),ISBLANK(Show_Occurrence__c)),IF(OR(ISNULL(Non_Show__c),ISBLANK(Non_Show__c)),&#39;&#39;,Non_Show__r.Name+ &#39;-&#39;+YRMO__c),Show_Occurrence__r.Name)</formula>
    <label>Event Formula</label>
    <type>Text</type>
</CustomField>